--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ st1\:*{behavior:url(#ieooui) }
 <tbody>
 <tr style="mso-yfti-irow: 0; mso-yfti-firstrow: yes; mso-yfti-lastrow: yes; height: 134.6pt;">
 <td style="width: 204.35pt; padding: .75pt .75pt .75pt .75pt; height: 134.6pt;" width="341">
-<p class="MsoNormal"><span lang="EN-US" style="font-family: 'Times New Roman';"><a href="https://www.lri.fr/~chen/index_fichiers/image001.jpg"><span style="color: windowtext; text-decoration: none; text-underline: none;"><img id="_x0000_i1027" src="index_files/image002.jpg" alt="CHEN Lin" width="287" height="216" border="0" /></span></a></span></p>
+<p class="MsoNormal"><span lang="EN-US" style="font-family: 'Times New Roman';"><a href="./image001.jpg"><span style="color: windowtext; text-decoration: none; text-underline: none;"><img id="_x0000_i1027" src="index_files/image002.jpg" alt="CHEN Lin" width="287" height="216" border="0" /></span></a></span></p>
 </td>
 <td style="width: 326.2pt; padding: .75pt .75pt .75pt .75pt; height: 134.6pt;" width="544">
 <h1><strong><span lang="EN-US" style="font-size: 18.0pt; color: maroon;">Lin Chen</span></strong></h1>
